FIX: spacing in bibliography references
closes #130

--- a/views/pages/bibliography/bibliography.less
+++ b/views/pages/bibliography/bibliography.less
@@ -38,6 +38,7 @@
   .references {
 
     li {
+      line-height:   1.5;
       margin-bottom: 0.5em;
       margin-left:   2.5em;
       text-indent:   -2.5em;
